TAG:  qcreports_db-3-4-0-20
DATE: 01/23/2006
STAFF: lec
CHANGES:
1) msp, seqload; added "setenv MGD ${RADAR_DBNAME} to runQC.csh

TAG:  qcreports_db-3-4-0-19
DATE: 01/20/2006
STAFF: lec
CHANGES:
1) GXD*; fixed a couple of report comments

TAG:  qcreports_db-3-4-0-18
TAG:  qcreports_db-3-4-0-17
DATE: 01/19/2006
STAFF: lec
CHANGES:
1) GXD_Images.py; order by creation date
2) GXD_LackingImages.py; order by creation date

TAG:  qcreports_db-3-4-0-16
DATE: 01/11/2006
STAFF: lec
CHANGES:
1) TR 7369; GXD_FullCodeMissingIndex.sql
2) TR 7370; GXD_FullCodeGene.sql
3) added comments to reports

TAG:  qcreports_db-3-4-0-15
DATE: 01/09/2006
STAFF: lec
CHANGES:
1) TR 7369; GXD_FullCodeMissingIndex.sql
2) TR 7370; GXD_FullCodeGene.sql

TAG:  qcreports_db-3-4-0-14
DATE: 01/06/2006
STAFF: lec
CHANGES:
1) TR 7369; GXD_FullCodeMissingIndex.sql
2) TR 7370; GXD_FullCodeGene.sql

TAG:  qcreports_db-3-4-0-13
DATE: 01/06/2006
STAFF: dow
CHANGES:
1) added link for IMSR QC Load reports

TAG:  qcreports_db-3-4-0-12
DATE: 01/04/2006
STAFF: lec
CHANGES:
1) added RADAR_DBNAME to Configuration.default

TAG:  qcreports_db-tr7335-BP
DATE: 12/27/2005
STAFF: mbw
CHANGES:
1) branch point tag for TR 7335

TAG:  qcreports_db-3-4-0-11
TAG:  qcreports_db-3-4-0-10
TAG:  qcreports_db-3-4-0-9
DATE: 12/21/2005
STAFF: lec
CHANGES:
1) GXD_ProbeAntibody.sql/TR 7347
2) PRB_StrainJAX1.py, PRB_StrainJAX2.py/TR 7342
3) GXD_GelBand.sql/TR 7344

TAG:  qcreports_db-3-4-0-8
DATE: 12/05/2005
STAFF: lec
CHANGES:
1) GXD_ProbeAntibody.sql
2) ALL_AssocPheno.py

TAG:  qcreports_db-3-4-0-7
DATE: 11/22/2005
STAFF: lec
CHANGES:
1) various enhancements/fixes to reports:
	MRK_TranscriptNoSP.sql

TAG:  qcreports_db-3-4-0-6
DATE: 11/21/2005
STAFF: lec
CHANGES:
1) various enhancements/fixes to probe reports:
	PRB_NoMarkerSeq.sql
	PRB_Marker.sql
	MGI_ProblemSequence.py
	PRB_MarkerSeq.sql (removed)

TAG:  qcreports_db-3-4-0-5
DATE: 11/17/2005
STAFF: lec
CHANGES:
1) TR 7247/Strain reports

TAG:  qcreports_db-3-4-0-4
DATE: 11/01/2005