@@ -29,7 +29,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="#nomenclature">Nomenclature</A>
 <LI><A HREF="#strains">Strains</A>
 <LI><A HREF="#strainsjax">Strains - JAX</A>
-<LI><A HREF="#mgs">MGS</A>
+<LI><A HREF="#sequencegroup">Sequence Group</A>
 <LI><A HREF="#sequence">Sequence</A>
 <LI><A HREF="#dataloads">Data Loads</A>
 <LI><A HREF="#lists">Lists/Other</A>
@@ -143,7 +143,6 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_DevBiol.rpt">Dev Biol papers to full code</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_Development.rpt">Development papers to full code</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_DevDyn.rpt">Dev Dyn papers to full code</A>
-<LI><A HREF="/data/reports/qcreports_db/output/GXD_Nature.rpt">Nature family papers to full code</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_FullCodeable.rpt">Markers that have not been full coded and that have full codeable papers</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_FullCodeGene.sql.rpt">Full Coded References that contain indexed Genes that have not been full coded</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_FullCodeMissingIndex.sql.rpt">Full Coded References that are missing a Gene in the Index</A>
@@ -234,7 +233,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/PRB_StrainJAX2.rpt">Public JAX Strains with exact/inexact Genotype Matches</A>
 </OL>
 
-<A NAME="mgs"><B>MGS</B></A>
+<A NAME="sequencegroup"><B>Sequence Group</B></A>
 <OL>
 <LI><A HREF="/data/reports/qcreports_db/output/SEQ_GenBank.rpt">All Sequences with Marker/Molecular Segment (bobs)</A>
 <LI><A HREF="/data/reports/qcreports_db/output/ACC_GenBank.sql.rpt">All GenBank IDs in MGI Associated with a Molecular Segment or Mouse Gene</A>
